@@ -1,0 +1,8 @@
+
+#ifndef __RQuantLib_h__
+#define __RQuantLib_h__
+
+#include "rquantlib.h"
+#include "RQuantLib_RcppExports.h"
+
+#endif // __RQuantLib_h__
